TG-4515 fix(ng-select): stop multi-select labels overflowing ng-selects

--- a/css/utils/_ngSelect.scss
+++ b/css/utils/_ngSelect.scss
@@ -110,6 +110,9 @@ form .form-group div.ui-select-container {
 
         span {
             width: auto !important;
+            max-width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
